@@ -205,95 +205,90 @@ IF( KDE4_FOUND )
 ENDIF( KDE4_FOUND )
 
 set(TAGLIB_MIN_VERSION "1.6")
-find_package(Taglib)
+find_package(Taglib REQUIRED)
 
-if(TAGLIB_FOUND)
-    include(CheckCXXSourceCompiles)
-    set(CMAKE_REQUIRED_INCLUDES "${TAGLIB_INCLUDES}")
-    set(CMAKE_REQUIRED_LIBRARIES "${TAGLIB_LIBRARIES}")
+include(CheckCXXSourceCompiles)
+set(CMAKE_REQUIRED_INCLUDES "${TAGLIB_INCLUDES}")
+set(CMAKE_REQUIRED_LIBRARIES "${TAGLIB_LIBRARIES}")
 
-    check_cxx_source_compiles("#include <asftag.h>
-    int main() { TagLib::ASF::Tag tag; return 0;}" TAGLIB_ASF_FOUND)
-    if( NOT TAGLIB_ASF_FOUND )
-        message(FATAL_ERROR "TagLib does not have ASF support compiled in.")
-    endif( NOT TAGLIB_ASF_FOUND )
+check_cxx_source_compiles("#include <asftag.h>
+int main() { TagLib::ASF::Tag tag; return 0;}" TAGLIB_ASF_FOUND)
+if( NOT TAGLIB_ASF_FOUND )
+    message(FATAL_ERROR "TagLib does not have ASF support compiled in.")
+endif( NOT TAGLIB_ASF_FOUND )
 
-    check_cxx_source_compiles("#include <mp4tag.h>
-    int main() { TagLib::MP4::Tag tag(0, 0); return 0;}" TAGLIB_MP4_FOUND)
-    if( NOT TAGLIB_MP4_FOUND )
-        message(FATAL_ERROR "TagLib does not have MP4 support compiled in.")
-    endif( NOT TAGLIB_MP4_FOUND )
+check_cxx_source_compiles("#include <mp4tag.h>
+int main() { TagLib::MP4::Tag tag(0, 0); return 0;}" TAGLIB_MP4_FOUND)
+if( NOT TAGLIB_MP4_FOUND )
+    message(FATAL_ERROR "TagLib does not have MP4 support compiled in.")
+endif( NOT TAGLIB_MP4_FOUND )
 
-    set(CMAKE_REQUIRED_INCLUDES)
-    set(CMAKE_REQUIRED_LIBRARIES)
+set(CMAKE_REQUIRED_INCLUDES)
+set(CMAKE_REQUIRED_LIBRARIES)
 
-    set(TAGLIB-EXTRAS_MIN_VERSION "1.0")
-    find_package(Taglib-Extras)
-    set(TAGLIB_EXTRAS_FOUND ${TAGLIB-EXTRAS_FOUND}) # we need a c-compatible name for the include file
+set(TAGLIB-EXTRAS_MIN_VERSION "1.0")
+find_package(Taglib-Extras)
+set(TAGLIB_EXTRAS_FOUND ${TAGLIB-EXTRAS_FOUND}) # we need a c-compatible name for the include file
 
-    include(CheckTagLibFileName)
+include(CheckTagLibFileName)
 
-    check_taglib_filename(COMPLEX_TAGLIB_FILENAME)
+check_taglib_filename(COMPLEX_TAGLIB_FILENAME)
 
-    include_directories(${TAGLIB_INCLUDES})
-    add_definitions(${TAGLIB_CFLAGS})
-    if (TAGLIB-EXTRAS_FOUND)
-        include_directories(${TAGLIB-EXTRAS_INCLUDES})
-        add_definitions(${TAGLIB-EXTRAS_CFLAGS})
-    endif (TAGLIB-EXTRAS_FOUND)
+include_directories(${TAGLIB_INCLUDES})
+add_definitions(${TAGLIB_CFLAGS})
+if (TAGLIB-EXTRAS_FOUND)
+    include_directories(${TAGLIB-EXTRAS_INCLUDES})
+    add_definitions(${TAGLIB-EXTRAS_CFLAGS})
+endif (TAGLIB-EXTRAS_FOUND)
 
-    SET( CANTATA_SRCS ${CANTATA_SRCS} devices/tags.cpp )
-
-    IF( ENABLE_KDE_SUPPORT )
-        SET( CANTATA_SRCS ${CANTATA_SRCS} gui/tageditor.cpp )
-        SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} gui/tageditor.h)
-        SET( CANTATA_UIS ${CANTATA_UIS} gui/tageditor.ui )
-
-        find_package(FFMPEG)
-        find_package(MPG123)
-        if(FFMPEG_FOUND AND MPG123_FOUND)
-            set (ENABLE_REPLAYGAIN_SUPPORT 1)
-            find_package(SPEEXDSP)
-            set(EBUR128_USE_SPEEX_RESAMPLER ${SPEEXDSP_FOUND})
-            SET(CANTATA_SRCS ${CANTATA_SRCS} replaygain/ffmpeginput.cpp replaygain/mpg123input.cpp)
-            include_directories(${CMAKE_SOURCE_DIR}/replaygain )
-            SET(CANTATA_SRCS ${CANTATA_SRCS} replaygain/ebur128.c replaygain/scanner.cpp replaygain/rgdialog.cpp replaygain/tagreader.cpp)
-            SET(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} replaygain/scanner.h replaygain/rgdialog.h replaygain/tagreader.h)
-        endif(FFMPEG_FOUND AND MPG123_FOUND)
-    endif( ENABLE_KDE_SUPPORT )
-
-endif (TAGLIB_FOUND)
+SET( CANTATA_SRCS ${CANTATA_SRCS} devices/tags.cpp devices/filetyperesolver.cpp )
 
 IF( ENABLE_KDE_SUPPORT )
-    if(TAGLIB_FOUND)
-        set (ENABLE_TAG_EDITOR_SUPPORT 1)
-        set (ENABLE_DEVICES_SUPPORT 1)
-        find_package(Mtp)
+    SET( CANTATA_SRCS ${CANTATA_SRCS} gui/tageditor.cpp )
+    SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} gui/tageditor.h)
+    SET( CANTATA_UIS ${CANTATA_UIS} gui/tageditor.ui )
 
-        SET( CANTATA_SRCS ${CANTATA_SRCS} devices/mediadevicecache.cpp devices/devicespage.cpp
-             devices/device.cpp devices/fsdevice.cpp devices/umsdevice.cpp
-             models/devicesmodel.cpp devices/filetyperesolver.cpp devices/actiondialog.cpp devices/devicepropertieswidget.cpp
-             devices/devicepropertiesdialog.cpp devices/filenameschemedialog.cpp devices/encoders.cpp
-             devices/transcodingjob.cpp devices/valueslider.cpp devices/trackorganiser.cpp)
-        SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/mediadevicecache.h devices/devicespage.h
-             devices/device.h devices/fsdevice.h devices/umsdevice.h models/devicesmodel.h
-             devices/actiondialog.h devices/devicepropertieswidget.h devices/devicepropertiesdialog.h
-             devices/filenameschemedialog.h devices/transcodingjob.h devices/valueslider.h devices/trackorganiser.h)
-        SET( CANTATA_UIS ${CANTATA_UIS} devices/devicespage.ui devices/actiondialog.ui devices/devicepropertieswidget.ui
-             devices/filenameschemedialog.ui devices/trackorganiser.ui)
+    find_package(FFMPEG)
+    find_package(MPG123)
+    if(FFMPEG_FOUND AND MPG123_FOUND)
+        set (ENABLE_REPLAYGAIN_SUPPORT 1)
+        find_package(SPEEXDSP)
+        set(EBUR128_USE_SPEEX_RESAMPLER ${SPEEXDSP_FOUND})
+        SET(CANTATA_SRCS ${CANTATA_SRCS} replaygain/ffmpeginput.cpp replaygain/mpg123input.cpp)
+        include_directories(${CMAKE_SOURCE_DIR}/replaygain )
+        SET(CANTATA_SRCS ${CANTATA_SRCS} replaygain/ebur128.c replaygain/scanner.cpp replaygain/rgdialog.cpp replaygain/tagreader.cpp)
+        SET(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} replaygain/scanner.h replaygain/rgdialog.h replaygain/tagreader.h)
+    endif(FFMPEG_FOUND AND MPG123_FOUND)
+endif( ENABLE_KDE_SUPPORT )
 
-        if (ENABLE_REMOTE_DEVICES)
-            SET(CANTATA_SRCS ${CANTATA_SRCS} devices/remotedevice.cpp devices/remotedevicepropertiesdialog.cpp
-                devices/remotedevicepropertieswidget.cpp)
-            SET(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/remotedevice.h devices/remotedevicepropertiesdialog.h
-                devices/remotedevicepropertieswidget.h)
-            SET(CANTATA_UIS ${CANTATA_UIS} devices/remotedevicepropertieswidget.ui)
-        endif (ENABLE_REMOTE_DEVICES)
-        if (MTP_FOUND)
-            SET( CANTATA_SRCS ${CANTATA_SRCS} devices/mtpdevice.cpp )
-            SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/mtpdevice.h )
-        endif (MTP_FOUND)
-    endif (TAGLIB_FOUND)
+IF( ENABLE_KDE_SUPPORT )
+    set (ENABLE_TAG_EDITOR_SUPPORT 1)
+    set (ENABLE_DEVICES_SUPPORT 1)
+    find_package(Mtp)
+
+    SET( CANTATA_SRCS ${CANTATA_SRCS} devices/mediadevicecache.cpp devices/devicespage.cpp
+            devices/device.cpp devices/fsdevice.cpp devices/umsdevice.cpp
+            models/devicesmodel.cpp devices/actiondialog.cpp devices/devicepropertieswidget.cpp
+            devices/devicepropertiesdialog.cpp devices/filenameschemedialog.cpp devices/encoders.cpp
+            devices/transcodingjob.cpp devices/valueslider.cpp devices/trackorganiser.cpp)
+    SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/mediadevicecache.h devices/devicespage.h
+            devices/device.h devices/fsdevice.h devices/umsdevice.h models/devicesmodel.h
+            devices/actiondialog.h devices/devicepropertieswidget.h devices/devicepropertiesdialog.h
+            devices/filenameschemedialog.h devices/transcodingjob.h devices/valueslider.h devices/trackorganiser.h)
+    SET( CANTATA_UIS ${CANTATA_UIS} devices/devicespage.ui devices/actiondialog.ui devices/devicepropertieswidget.ui
+            devices/filenameschemedialog.ui devices/trackorganiser.ui)
+
+    if (ENABLE_REMOTE_DEVICES)
+        SET(CANTATA_SRCS ${CANTATA_SRCS} devices/remotedevice.cpp devices/remotedevicepropertiesdialog.cpp
+            devices/remotedevicepropertieswidget.cpp)
+        SET(CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/remotedevice.h devices/remotedevicepropertiesdialog.h
+            devices/remotedevicepropertieswidget.h)
+        SET(CANTATA_UIS ${CANTATA_UIS} devices/remotedevicepropertieswidget.ui)
+    endif (ENABLE_REMOTE_DEVICES)
+    if (MTP_FOUND)
+        SET( CANTATA_SRCS ${CANTATA_SRCS} devices/mtpdevice.cpp )
+        SET( CANTATA_MOC_HDRS ${CANTATA_MOC_HDRS} devices/mtpdevice.h )
+    endif (MTP_FOUND)
 
     macro_ensure_version("4.7.0" ${KDE_VERSION} KDE_VERSION_47)
 
@@ -359,23 +354,21 @@ ELSE( ENABLE_KDE_SUPPORT )
     SET( XDG_APPS_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/share/applications" )
 ENDIF( ENABLE_KDE_SUPPORT )
 
-if(TAGLIB_FOUND)
-    TARGET_LINK_LIBRARIES(cantata ${TAGLIB_LIBRARIES})
-    include_directories( ${TAGLIB_INCLUDES})
-    if (TAGLIB-EXTRAS_FOUND)
-        TARGET_LINK_LIBRARIES(cantata ${TAGLIB-EXTRAS_LIBRARIES})
-        include_directories( ${TAGLIB-EXTRAS_INCLUDES})
-    endif (TAGLIB-EXTRAS_FOUND)
+TARGET_LINK_LIBRARIES(cantata ${TAGLIB_LIBRARIES})
+include_directories( ${TAGLIB_INCLUDES})
+if (TAGLIB-EXTRAS_FOUND)
+    TARGET_LINK_LIBRARIES(cantata ${TAGLIB-EXTRAS_LIBRARIES})
+    include_directories( ${TAGLIB-EXTRAS_INCLUDES})
+endif (TAGLIB-EXTRAS_FOUND)
 
-    if(FFMPEG_FOUND AND MPG123_FOUND)
-        TARGET_LINK_LIBRARIES(cantata ${KDE4_THREADWEAVER_LIBRARIES} ${FFMPEG_LIBRARIES} ${MPG123_LIBRARIES})
-        include_directories(${FFMPEG_INCLUDE_DIRS} ${MPG123_INCLUDE_DIRS})
-        if(SPEEXDSP_FOUND)
-            TARGET_LINK_LIBRARIES(cantata ${SPEEXDSP_LIBRARIES})
-            include_directories( ${SPEEXDSP_INCLUDE_DIRS})
-        endif(SPEEXDSP_FOUND)
-    endif(FFMPEG_FOUND AND MPG123_FOUND)
-endif (TAGLIB_FOUND)
+if(FFMPEG_FOUND AND MPG123_FOUND)
+    TARGET_LINK_LIBRARIES(cantata ${KDE4_THREADWEAVER_LIBRARIES} ${FFMPEG_LIBRARIES} ${MPG123_LIBRARIES})
+    include_directories(${FFMPEG_INCLUDE_DIRS} ${MPG123_INCLUDE_DIRS})
+    if(SPEEXDSP_FOUND)
+        TARGET_LINK_LIBRARIES(cantata ${SPEEXDSP_LIBRARIES})
+        include_directories( ${SPEEXDSP_INCLUDE_DIRS})
+    endif(SPEEXDSP_FOUND)
+endif(FFMPEG_FOUND AND MPG123_FOUND)
 
 if (ENABLE_WEBKIT)
     SET( CANTATA_SRCS ${CANTATA_SRCS} gui/infopage.cpp )
@@ -403,35 +396,29 @@ IF( ENABLE_KDE_SUPPORT )
     message("      Enabled features:")
     message("        - Track organizer")
     message("        - Open files via command line")
-    if(TAGLIB_FOUND)
-        message("        - Tag editor")
-        message("        - UMS device sync")
-        if (TAGLIB_FOUND AND MTP_FOUND)
-            message("        - MTP device sync")
-        endif (TAGLIB_FOUND AND MTP_FOUND)
-        if (TAGLIB_FOUND AND ENABLE_REMOTE_DEVICES)
-            message("        - Remote device sync (EXPERIMENTAL)")
-        endif (TAGLIB_FOUND AND ENABLE_REMOTE_DEVICES)
-        if(FFMPEG_FOUND AND MPG123_FOUND)
-            message("        - ReplayGain calculation")
-        endif(FFMPEG_FOUND AND MPG123_FOUND)
-    endif(TAGLIB_FOUND)
-    if( (NOT TAGLIB_FOUND) OR (TAGLIB_FOUND AND NOT MTP_FOUND) OR (NOT FFMPEG_FOUND OR NOT MPG123_FOUND) )
+    message("        - Tag editor")
+    message("        - UMS device sync")
+    if (MTP_FOUND)
+        message("        - MTP device sync")
+    endif (MTP_FOUND)
+    if (ENABLE_REMOTE_DEVICES)
+        message("        - Remote device sync (EXPERIMENTAL)")
+    endif (ENABLE_REMOTE_DEVICES)
+    if(FFMPEG_FOUND AND MPG123_FOUND)
+        message("        - ReplayGain calculation")
+    endif(FFMPEG_FOUND AND MPG123_FOUND)
+    if( NOT MTP_FOUND OR NOT FFMPEG_FOUND OR NOT MPG123_FOUND )
         message("      Disabled features:")
-        if(NOT TAGLIB_FOUND)
-            message("        - Tag editor (taglib required)")
-            message("        - UMS device sync (taglib required)")
-        endif(NOT TAGLIB_FOUND)
-        if (NOT TAGLIB_FOUND OR NOT MTP_FOUND)
-            message("        - MTP device sync (taglib and libmtp required)")
-        endif (NOT TAGLIB_FOUND OR NOT MTP_FOUND)
-        #if (NOT TAGLIB_FOUND OR NOT ENABLE_REMOTE_DEVICES)
+        if (NOT MTP_FOUND)
+            message("        - MTP device sync (libmtp required)")
+        endif (NOT MTP_FOUND)
+        #if (NOT ENABLE_REMOTE_DEVICES)
         #    message("        - Remote device sync (EXPERIMENTAL)")
-        #endif (NOT TAGLIB_FOUND OR NOT ENABLE_REMOTE_DEVICES)
+        #endif (NOT ENABLE_REMOTE_DEVICES)
         if(NOT FFMPEG_FOUND OR NOT MPG123_FOUND)
             message("        - ReplayGain calculation (ffmpeg AND mpg123 required)")
         endif(NOT FFMPEG_FOUND OR NOT MPG123_FOUND)
-    endif( (NOT TAGLIB_FOUND) OR (TAGLIB_FOUND AND NOT MTP_FOUND) OR (NOT FFMPEG_FOUND OR NOT MPG123_FOUND) )
+    endif( NOT MTP_FOUND OR NOT FFMPEG_FOUND OR NOT MPG123_FOUND )
 ELSE( ENABLE_KDE_SUPPORT )
     message("INFO: Building WITHOUT KDE support - Device Sync, Tag Editing, Track Organizer, ReplayGain, and CommandLine support DISABLED")
 ENDIF( ENABLE_KDE_SUPPORT )
