@@ -7,7 +7,6 @@
 
 #cmakedefine ENABLE_TAG_EDITOR_SUPPORT 1
 #cmakedefine ENABLE_DEVICES_SUPPORT 1
-#cmakedefine TAGLIB_FOUND 1
 #cmakedefine COMPLEX_TAGLIB_FILENAME 1
 #cmakedefine TAGLIB_EXTRAS_FOUND 1
 #cmakedefine MTP_FOUND 1
